# velo-rift

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  Dockerfile.base  Dockerfile.ci  README.md  all_tests.txt  busybox.manifest  ci_tests.txt  ci_tests_norm.txt  local-ci.sh  repro_clean_final.sh  setup-dev.sh  test.sh  test_shim_load.sh  velo.manifest  verify_perms.sh  vrift.manifest
.githooks/: pre-commit
.github/workflows/: benchmark.yml  ci.yml
.ruff_cache/0.14.14/: 6408586569613995347  6627769685912232716
crates/velo-cli/: Cargo.toml
crates/velo-cli/src/: daemon.rs  gc.rs  isolation.rs  main.rs  mount.rs
crates/velo-cli/tests/: concurrent_test.rs  stress_test.rs
crates/velo-daemon/: Cargo.toml
crates/velo-daemon/src/: main.rs
crates/velo-fuse/: Cargo.toml
crates/velo-lock/: Cargo.toml
crates/velo-lock/src/: lib.rs
crates/velo-pack/: Cargo.toml
crates/velo-pack/src/: lib.rs
crates/vrift-cas/: BENCHMARK.md  Cargo.toml
crates/vrift-cas/benches/: cas_bench.rs  zero_copy_bench.rs
crates/vrift-cas/src/: io_backend.rs  lib.rs  link_strategy.rs  parallel_ingest.rs  protection.rs  reflink.rs  streaming_ingest.rs  streaming_pipeline.rs  zero_copy_ingest.rs
crates/vrift-cas/tests/: concurrent_test.rs  iron_law_test.rs  metadata_isolation_test.rs  stress_test.rs  test_macos_eperm.rs
crates/vrift-cli/: Cargo.toml
crates/vrift-cli/examples/: parallel_bench.rs
crates/vrift-cli/src/: active.rs  daemon.rs  doctor.rs  gc.rs  inception.rs  isolation.rs  main.rs  mount.rs  preflight.rs  registry.rs  security_filter.rs  target_cache.rs
crates/vrift-cli/tests/: config_test.rs  e2e_config_test.rs  stress_test.rs
crates/vrift-config/: Cargo.toml
crates/vrift-config/src/: lib.rs  logging.rs  path.rs  testing.rs
crates/vrift-config/tests/: integration_test.rs
crates/vrift-daemon/: Cargo.toml
crates/vrift-daemon/examples/: trigger_mmap.rs
crates/vrift-daemon/src/: main.rs
crates/vrift-fuse/: Cargo.toml
crates/vrift-fuse/src/: lib.rs
crates/vrift-inception-layer/: Cargo.toml  build.rs
crates/vrift-inception-layer/src/: interpose.rs  ipc.rs  lib.rs  macros.rs  path.rs  profile.rs  reals.rs  state.rs
crates/vrift-inception-layer/src/c/: variadic_inception.c
crates/vrift-inception-layer/src/state/: init.rs  mod.rs  worker.rs
crates/vrift-inception-layer/src/sync/: fd_table.rs  mod.rs  recursive_mutex.rs  ring_buffer.rs
crates/vrift-inception-layer/src/syscalls/: dir.rs  io.rs  linux_raw.rs  macos_raw.rs  mem.rs  misc.rs  mmap.rs  mod.rs  open.rs  path.rs  path_ops.rs  stat.rs  vfs_ops.rs
crates/vrift-inception-layer/tests/: stress_init
crates/vrift-ipc/: Cargo.toml
crates/vrift-ipc/src/: lib.rs  vdir_types.rs
crates/vrift-lock/: Cargo.toml
crates/vrift-manifest/: Cargo.toml
crates/vrift-manifest/src/: lib.rs  lmdb.rs  tier.rs
crates/vrift-pack/: Cargo.toml
crates/vrift-pack/src/: lib.rs
crates/vrift-runtime/: Cargo.toml
crates/vrift-runtime/src/: lib.rs
crates/vrift-shim/: Cargo.toml  build.rs
crates/vrift-shim/docs/: SHIM_SAFETY_GUIDE.md
crates/vrift-shim/examples/: writer.rs
crates/vrift-shim/src/: interpose.rs  ipc.rs  lib.rs  macros.rs  path.rs  reals.rs  state.rs
crates/vrift-shim/src/c/: variadic_shim.c
crates/vrift-shim/src/sync/: fd_table.rs  mod.rs  recursive_mutex.rs  ring_buffer.rs
crates/vrift-shim/src/syscalls/: close.rs  dir.rs  io.rs  linux_raw.rs  macos_raw.rs  mem.rs  misc.rs  mmap.rs  mod.rs  open.rs  path.rs  path_ops.rs  process.rs  stat.rs  vfs_ops.rs
crates/vrift-shim/tests/: stress_init.c
crates/vrift-vdird/: Cargo.toml
crates/vrift-vdird/src/: commands.rs  ignore.rs  ingest.rs  lib.rs  main.rs  scan.rs  socket.rs  vdir.rs  watch.rs
crates/vrift-vdird/tests/: integration.rs  qa_vdir.rs  stability.rs
docs/: ARCHITECTURE.md  BENCHMARK.md  BRANDING_AND_HIERARCHY.md  BUG-007-BOOTSTRAP-DEADLOCK.md  CI_SANITIZER_GUIDE.md  COMPARISON.md  COMPATIBILITY.md  DEV-TICKET-RFC-0039.md  RFC-0039-Transparent-Virtual-Projection.md  RFC-0040-Streaming-Ingest-Pipeline.md  TASK_ASSIGNMENTS.md  USAGE.md  velo-world-model-whitepaper.md
docs/architecture/: velo-technical-deep-dive.md  velo-technical-positioning.md
docs/archive/: rfc-0043-cas-layer.md  rfc-0044-runtime.md  vision-original.md
docs/design/: canonical-workspace-path-review-r2.md  canonical-workspace-path-review.md  canonical-workspace-path.md
docs/qa/: DEV-TEST-REPORT.md  RFC-0039-ARCHITECTURE-REVIEW.md  RFC-0039-QA-TEST-CASES.md
docs/rfcs/: RFC-0039-Transparent-Virtual-Projection.md  RFC-0041-CAS-GC-Multi-Project.md  RFC-0043-Daemon-Architecture.md  RFC-0044-PSFS-Stat-Acceleration.md  RFC-0045-PERF-PROFILE.md  RFC-0046-Deterministic-Metadata-Isolation.md  RFC-0047-Syscall-Audit.md  RFC-0047-VFS-Mutation-Semantics.md  RFC-0048-Transparent-Binary-Shadowing.md  RFC-0049-VFS-Inception-Gap.md  RFC-0052-L2-Artifact-Cache.md  RFC-0053-macOS-Shell-Interception-FUSE.md  RFC-0054-vrift-Architecture.md
examples/: config.toml  package.json  velo-rift-node_modules_package.json
examples/benchmarks/: large_package.json  medium_package.json  small_package.json  xxlarge_package.json
scripts/: bench_inception.sh  benchmark_node_modules.sh  benchmark_parallel.sh  benchmark_suite.py  ci-common.sh  demo.sh  demo_dedup.sh  demo_gc.sh  demo_phantom.sh  e2e_test.py  gc_e2e_test.py  manual_test_shim.sh  qa_full_suite.sh  run_all_tests.sh  run_linux_tests.sh  setup_busybox.sh  simple_open.c  test-suites.conf  test_abi_hazard.sh  test_cow.sh  test_cow_behavior.sh  test_gc.sh  test_inception_basic.sh  test_inception_mode.sh  test_logging_v2.sh  test_resilience.sh  test_shim_basic.sh  test_vfs_behavior.sh  v-ci  v-integration.sh
test_project/: hello.txt
tests/: run_full_regression.sh  scorched_earth_verification.sh  test_isolation.sh
tests/e2e/: run_sprint1_validation.sh  test_cargo_incremental.sh  test_rustc_single_file.sh
tests/extended/: test_e2e_gcc_compile.sh  test_e2e_mtime_update.sh  test_e2e_mutation_syscalls.sh  test_e2e_path_syscalls.sh
tests/helpers/: compile_test_binaries.sh  test_stat.c
tests/poc/: benchmark_mt_stat.c  (+167 more)
(+68 files in other folders)
