[workspace]
resolver = "2"
members = [
    "crates/velo-cas",
    "crates/velo-manifest",
    "crates/velo-pack",
    "crates/velo-runtime",
    "crates/velo-shim",
    "crates/velo-fuse",
    "crates/velo-lock",
    "crates/velo-cli",
    "crates/velo-daemon", "crates/velo-ipc",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/velo-sh/velo-rift"

[workspace.dependencies]
# Hashing
blake3 = "1.5"

# Serialization
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# CLI
clap = { version = "4.5", features = ["derive", "env"] }
tokio = { version = "1.36", features = ["full"] }
nix = { version = "0.28", features = ["fs", "mount", "sched", "signal", "user"] }

# File operations
walkdir = "2.5"
memmap2 = "0.9"
tempfile = "3.14"
notify = "6.1.1"

# Internal crates
velo-cas = { path = "crates/velo-cas" }
velo-manifest = { path = "crates/velo-manifest" }
velo-pack = { path = "crates/velo-pack" }
velo-runtime = { path = "crates/velo-runtime" }
velo-shim = { path = "crates/velo-shim" }
velo-fuse = { path = "crates/velo-fuse" }
velo-lock = { path = "crates/velo-lock" }
velo-ipc = { path = "crates/velo-ipc" }
