[workspace]
resolver = "2"
members = [
    "crates/vrift-cas",
    "crates/vrift-config",
    "crates/vrift-manifest",
    "crates/vrift-pack",
    "crates/vrift-runtime",
    "crates/vrift-shim",
    "crates/vrift-fuse",
    "crates/vrift-lock",
    "crates/vrift-cli",
    "crates/vrift-daemon", "crates/vrift-ipc",
]
# Exclude vrift-shim from default cargo commands (INIT constructor causes hangs)
default-members = [
    "crates/vrift-cas",
    "crates/vrift-config",
    "crates/vrift-manifest",
    "crates/vrift-pack",
    "crates/vrift-runtime",
    "crates/vrift-fuse",
    "crates/vrift-lock",
    "crates/vrift-cli",
    "crates/vrift-daemon", "crates/vrift-ipc",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/velo-sh/velo-rift"

[workspace.dependencies]
# Hashing
blake3 = "1.5"

# Serialization
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
serde_json = "1.0"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# CLI
clap = { version = "4.5", features = ["derive", "env"] }
tokio = { version = "1.36", features = ["full"] }
nix = { version = "0.28", features = ["fs", "mount", "sched", "signal", "user", "mman"] }

# File operations
walkdir = "2.5"
memmap2 = "0.9"
tempfile = "3.14"
notify = "6.1.1"
tracing = "0.1"

# Internal crates
vrift-cas = { path = "crates/vrift-cas" }
vrift-config = { path = "crates/vrift-config" }
vrift-manifest = { path = "crates/vrift-manifest" }
vrift-pack = { path = "crates/vrift-pack" }
vrift-runtime = { path = "crates/vrift-runtime" }
vrift-shim = { path = "crates/vrift-shim" }
vrift-fuse = { path = "crates/vrift-fuse" }
vrift-lock = { path = "crates/vrift-lock" }
vrift-ipc = { path = "crates/vrift-ipc" }
