[package]
name = "velo-cli"
description = "Command-line interface for Velo Rift"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "velo"
path = "src/main.rs"

[dependencies]
clap.workspace = true
anyhow.workspace = true
walkdir.workspace = true
notify.workspace = true
velo-cas.workspace = true
velo-manifest.workspace = true
velo-shim.workspace = true
velo-fuse = { workspace = true, optional = true }
velo-lock.workspace = true
velo-runtime.workspace = true
nix.workspace = true
tempfile.workspace = true
tokio.workspace = true
velo-ipc.workspace = true
bincode.workspace = true
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[features]
default = []
fuse = ["velo-fuse/fuse"]

#[dev-dependencies]
