[package]
name = "velo-daemon"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
tokio = { workspace = true }
velo-ipc = { workspace = true }
velo-cas = { workspace = true }
serde = { workspace = true }
bincode = { workspace = true }
thiserror = { workspace = true }
# We'll use tokio::net::UnixListener, which is available in tokio "full" or "net" + "rt"
