[package]
name = "velo-pack"
description = "Packfile format for Velo Rift hotspot consolidation"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
blake3.workspace = true
serde.workspace = true
bincode.workspace = true
thiserror.workspace = true
memmap2.workspace = true
velo-cas.workspace = true

[dev-dependencies]
tempfile = "3.14"
