[package]
name = "vrift-cas"
description = "Content-Addressable Storage for Velo Rift"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
blake3.workspace = true
thiserror.workspace = true
memmap2.workspace = true
tracing = "0.1.44"
rayon = "1.11.0"

[dev-dependencies]
tempfile = "3.14"
criterion = "0.5"

[[bench]]
name = "cas_bench"
harness = false
