[package]
name = "vrift-cas"
description = "Content-Addressable Storage for Velo Rift"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = []
# Enable io_uring backend for Linux (requires Linux 5.1+)
io_uring = ["tokio-uring", "tokio"]

[dependencies]
blake3.workspace = true
thiserror.workspace = true
memmap2.workspace = true
tracing = "0.1.44"
rayon = "1.11.0"

# Optional: io_uring for Linux high-performance I/O
tokio-uring = { version = "0.5", optional = true }
tokio = { version = "1", features = ["rt", "sync"], optional = true }
notify.workspace = true
crossbeam-channel = "0.5.15"
dashmap = "6.1.0"
num_cpus = "1.17.0"
hex = "0.4.3"
walkdir.workspace = true
nix = { workspace = true, features = ["fs"] }

[dev-dependencies]
tempfile = "3.14"
criterion = "0.5"

[[bench]]
name = "cas_bench"
harness = false

[[bench]]
name = "zero_copy_bench"
harness = false
