[package]
name = "vrift-cli"
description = "Command-line interface for Velo Rift"
version.workspace = true
edition.workspace = true
license.workspace = true
default-run = "vrift"

[[bin]]
name = "vrift"
path = "src/main.rs"

[dependencies]
clap.workspace = true
anyhow.workspace = true
walkdir.workspace = true
notify.workspace = true
vrift-cas.workspace = true
vrift-manifest.workspace = true
vrift-inception-layer.workspace = true
vrift-fuse = { workspace = true, optional = true }
vrift-lock.workspace = true
vrift-config.workspace = true
vrift-runtime.workspace = true
nix.workspace = true
tempfile.workspace = true
tokio.workspace = true
vrift-ipc.workspace = true
vrift-vdird.workspace = true
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { workspace = true }
serde_json = "1.0"
toml = "0.8"
rayon = "1.11.0"
libc = "0.2"
dirs = "5"
fs2 = "0.4"
uuid = { version = "1.0", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
indicatif = { version = "0.17", features = ["rayon"] }
console = "0.15"

[features]
default = []
fuse = ["vrift-fuse/fuse"]

[dev-dependencies]
tempfile = "3.14"
toml = "0.8"
vrift-config = { path = "../vrift-config" }
