[package]
name = "vrift-config"
version = "0.1.0"
edition = "2021"
description = "Configuration management for Velo Rift"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
dirs = "5"
once_cell = "1.19"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "1.0"
anyhow = "1.0"
tempfile = "3.14"
vrift-ipc = { path = "../vrift-ipc" }
blake3 = "1.5"

[dev-dependencies]
tempfile = "3.14"
toml = "0.8"
vrift-manifest = { path = "../vrift-manifest" }
