[package]
name = "vrift-daemon"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "vriftd"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
tokio = { workspace = true }
vrift-ipc = { workspace = true }
vrift-cas = { workspace = true }
vrift-manifest = { workspace = true }
serde = { workspace = true }
bincode = { workspace = true }
thiserror = { workspace = true }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
nix = { workspace = true, features = ["user", "fs"] }
libc = "0.2"
# We'll use tokio::net::UnixListener, which is available in tokio "full" or "net" + "rt"
