[package]
name = "vrift-fuse"
description = "FUSE filesystem daemon for Velo Rift"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
libc = "0.2"
vrift-cas.workspace = true
vrift-manifest.workspace = true
log = "0.4"
env_logger = "0.11"
anyhow.workspace = true

[target.'cfg(target_os = "linux")'.dependencies]
fuser = { version = "0.14" }

[features]
default = []
fuse = []  # Enables FUSE support where available (Linux)
