[package]
name = "vrift-inception-layer"
description = "Inception Layer (LD_PRELOAD) for Velo Rift virtual filesystem"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "vrift_inception_layer"
crate-type = ["cdylib"]  # Shared library for DYLD_INSERT_LIBRARIES
test = false  # Inception layer constructor causes hangs when tested
doctest = false  # Also disable doctests to prevent any test harness loading

[dependencies]
libc = "0.2"
rkyv = { version = "0.8", features = ["alloc"] }
vrift-ipc = { path = "../vrift-ipc", default-features = false }
vrift-config = { path = "../vrift-config" }
blake3 = "1.5"

[build-dependencies]
cc = "1.0"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
