[package]
name = "vrift-manifest"
description = "Manifest data structure for Velo Rift virtual filesystem"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
blake3.workspace = true
serde.workspace = true
bincode.workspace = true
thiserror.workspace = true
vrift-cas.workspace = true
heed = "0.20"
dashmap = "6.1"
tracing.workspace = true
dirs = "6.0.0"

[dev-dependencies]
tempfile = "3.14"
