[package]
name = "vrift-pack"
description = "Packfile format for Velo Rift hotspot consolidation"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
blake3.workspace = true
serde.workspace = true
rkyv.workspace = true
thiserror.workspace = true
memmap2.workspace = true
vrift-cas.workspace = true

[dev-dependencies]
tempfile = "3.14"
