[package]
name = "vrift-shim"
description = "LD_PRELOAD shim for Velo Rift virtual filesystem"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "velo_shim"
crate-type = ["cdylib"]  # Shared library for LD_PRELOAD

[dependencies]
libc = "0.2"
vrift-cas.workspace = true
vrift-manifest.workspace = true
memmap2.workspace = true
thiserror.workspace = true
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
tracing-appender = "0.2.4"

[build-dependencies]
cc = "1.0"
