[package]
name = "vrift-vdird"
version = "0.1.0"
edition = "2021"
description = "Per-project daemon for vrift virtual directory management"

[[bin]]
name = "vdir_d"
path = "src/main.rs"

[dependencies]
# Core
tokio = { version = "1", features = ["full"] }
anyhow = "1"
thiserror = "1"
serde = { version = "1", features = ["derive"] }

# IPC
vrift-ipc = { path = "../vrift-ipc" }
vrift-cas = { path = "../vrift-cas" }
vrift-manifest = { path = "../vrift-manifest" }
vrift-config = { path = "../vrift-config" }
rkyv = "0.8"

# Hashing
blake3 = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Shared memory
memmap2 = "0.9"
libc = "0.2"

# Utilities
hex = "0.4"
crc32fast = "1.3"
dirs = "5"
walkdir = "2"

# RFC-0039: FS Watch for Live Ingest (Layer 2)
# Use fsevent on macOS (kqueue has panic bugs in notify-rs kqueue crate)
notify = { version = "6.1", default-features = false, features = ["macos_fsevent"] }

[dev-dependencies]
tempfile = "3"
